<resources>
    <string name="app_name">RtcWrapper</string>
    <string name="calling_local_name">本机</string>
    <string name="calling_camera_disabled">摄像头已关闭</string>
    <string name="calling_camera_disabled_remote_tips1">对方忙，暂时关闭视频画面</string>
    <string name="calling_camera_disabled_local_tips1">摄像头已关闭</string>
    <string name="calling_camera_disabled_local_tips2">您可下拉控制面板去开启摄像头</string>
    <string name="calling_watching">正在观看</string>
    <string name="calling_audio_only">语音通话中</string>
    <string name="calling_audio_only_local_tips1">您已切换为语音模式</string>
    <string name="calling_audio_only_local_tips2">无法看到对方画面</string>
    <string name="calling_video_pause_mute_by_bwlimit">对方网络不稳定，无法传输视频</string>
    <string name="calling_video_pause_mute_by_noinput">对方未开启视频</string>
    <string name="calling_video_pause">视频暂停</string>
    <string name="calling_video_requesting">网络不给力，暂时无法接收视频</string>
    <string name="calling_video_unsupported">视频编码不被支持</string>
    <string name="call_pending_fail">呼叫无法接通</string>
    <string name="call_pending_cancel">邀请已取消</string>
    <string name="call_pending">正在呼叫</string>
    <string name="call_income_invite">邀请你进行视频通话</string>
    <string name="call_income_invite_voice">邀请你进行语音通话</string>
    <string name="call_outing">正在呼叫,等待对方接听</string>
    <string name="hang_up">挂断</string>
    <string name="accept">接听</string>
    <string name="voice_accept">语音接听</string>
    <string name="cancel">取消</string>
    <string name="time_out">超时</string>
    <string name="voice_model">语音模式</string>
    <string name="video_model">视频模式</string>
    <string name="audio_mute">静音</string>
    <string name="camera">摄像头</string>
    <string name="switch_camera">切换</string>
    <string name="open_camera">打开</string>
    <string name="close_camera">关闭</string>
    <string name="add_other">邀请</string>
    <string name="forward_pstn">呼叫手机</string>
    <string name="ring">振铃</string>
    <string name="recording">录屏</string>
    <string name="stop_recording">停止</string>
    <string name="forward_call">转通话</string>
    <string name="request_focus">抢焦点</string>
    <string name="release_focus">放焦点</string>
    <string name="speaker">扬声器</string>
    <string name="earpiece">听筒</string>
    <string name="headset">耳机</string>
    <string name="bluetooth">蓝牙</string>
</resources>