<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/call_peer_name"
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="48dp"
        android:ellipsize="end"
        android:gravity="end"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textSize="72sp" />

    <TextView
        android:id="@+id/income_invite_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/call_peer_name"
        android:layout_alignEnd="@+id/call_peer_name"
        android:layout_marginTop="14dp"
        android:text="@string/call_outing"
        android:textColor="#a8a8a8"
        android:textSize="48sp" />

    <com.xiaoyu.rtc.wrapper.view.Loading3BallView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:layout_below="@+id/income_invite_text"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
            android:id="@+id/switch_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/select_focus"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/switch_camera" />

            <TextView
                android:id="@+id/tv_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/camera"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

        <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
            android:id="@+id/pstn_ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/forward_pstn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/forward_pstn"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

        <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
            android:id="@+id/call_mode_ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/call_mode_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/voice_answer" />

            <TextView
                android:id="@+id/call_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/voice_model"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

        <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
            android:id="@+id/hang_up_ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/hang_up" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/cancel"
                android:textColor="#ff6666"
                android:textSize="20sp" />
        </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>
    </LinearLayout>

</merge>
