<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/recording"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/recording_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/start_record" />

                <TextView
                    android:id="@+id/recording_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/recording"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/audio_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/audio_mute_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/audio_mute" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/audio_mute"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>


            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/add_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/add_conferee" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/add_other"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/buzzer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ring" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ring"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/mute_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/voice_answer" />

                <TextView
                    android:id="@+id/tv_mute_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="VMute"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/switch_camera" />

                <TextView
                    android:id="@+id/tv_switch_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/camera"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>


            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/switch_call_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/switch_call_mode_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/voice_answer" />

                <TextView
                    android:id="@+id/switch_call_mode_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/voice_model"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>


            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/huang_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hang_up" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/hang_up"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/forward_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="49dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/call_light" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/forward_call"
                    android:textColor="#ccff66"
                    android:textSize="20sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/switch_out_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_switch_out_mute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/focus_on" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/audio_mute"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/switch_output_device"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_switch_output_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/focus_on" />

                <TextView
                    android:id="@+id/tv_switch_output_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/speaker"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

            <com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout
                android:id="@+id/switch_focus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/select_focus"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_switch_focus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/focus_off" />

                <TextView
                    android:id="@+id/tv_switch_focus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="LOSS"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </com.xiaoyu.rtc.wrapper.view.AlphaLinearLayout>

        </LinearLayout>
    </LinearLayout>
</merge>